BankAccount.currency property added incl. API validations.
