# src/main/java/biz/turnonline/ecosystem/payment/api/model/BankAccount.java
@@ -12,7 +12,7 @@ import java.util.Objects;
  **/
 
 @ApiModel( description = "The bank account resource." )
-@javax.annotation.Generated( value = "class io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2018-08-26T12:15:58.121Z" )
+@javax.annotation.Generated( value = "class io.swagger.codegen.languages.JavaJerseyServerCodegen", date = "2018-09-02T07:18:01.570Z" )
 public class BankAccount
 {
 
@@ -29,6 +29,8 @@ public class BankAccount
     private String iban = null;
 
     private String bic = null;
+
+    private String currency = null;
 
     private Boolean primary = false;
 
@@ -123,7 +125,7 @@ public class BankAccount
     }
 
     /**
-     * The formatted full bank account number.
+     * The formatted full bank account number incl. bank code.
      **/
     public BankAccount formatted( String formatted )
     {
@@ -132,7 +134,7 @@ public class BankAccount
     }
 
 
-    @ApiModelProperty( value = "The formatted full bank account number." )
+    @ApiModelProperty( value = "The formatted full bank account number incl. bank code." )
     @JsonProperty( "formatted" )
     public String getFormatted()
     {
@@ -186,6 +188,28 @@ public class BankAccount
     public void setBic( String bic )
     {
         this.bic = bic;
+    }
+
+    /**
+     * The bank account currency. An alphabetic code based on the ISO 4217.
+     **/
+    public BankAccount currency( String currency )
+    {
+        this.currency = currency;
+        return this;
+    }
+
+
+    @ApiModelProperty( value = "The bank account currency. An alphabetic code based on the ISO 4217." )
+    @JsonProperty( "currency" )
+    public String getCurrency()
+    {
+        return currency;
+    }
+
+    public void setCurrency( String currency )
+    {
+        this.currency = currency;
     }
 
     /**
@@ -252,6 +276,7 @@ public class BankAccount
                 Objects.equals( formatted, bankAccount.formatted ) &&
                 Objects.equals( iban, bankAccount.iban ) &&
                 Objects.equals( bic, bankAccount.bic ) &&
+                Objects.equals( currency, bankAccount.currency ) &&
                 Objects.equals( primary, bankAccount.primary ) &&
                 Objects.equals( bank, bankAccount.bank );
     }
@@ -259,7 +284,7 @@ public class BankAccount
     @Override
     public int hashCode()
     {
-        return Objects.hash( id, name, prefix, accountNumber, formatted, iban, bic, primary, bank );
+        return Objects.hash( id, name, prefix, accountNumber, formatted, iban, bic, currency, primary, bank );
     }
 
     @Override
@@ -275,6 +300,7 @@ public class BankAccount
         sb.append( "    formatted: " ).append( toIndentedString( formatted ) ).append( "\n" );
         sb.append( "    iban: " ).append( toIndentedString( iban ) ).append( "\n" );
         sb.append( "    bic: " ).append( toIndentedString( bic ) ).append( "\n" );
+        sb.append( "    currency: " ).append( toIndentedString( currency ) ).append( "\n" );
         sb.append( "    primary: " ).append( toIndentedString( primary ) ).append( "\n" );
         sb.append( "    bank: " ).append( toIndentedString( bank ) ).append( "\n" );
         sb.append( "}" );
